<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="10dp"
            android:text="@string/new_friend_info" />

        <GridLayout
            android:id="@+id/grid_layout_new_user"
            android:layout_width="373dp"
            android:layout_height="103dp">

            <TextView
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/new_name" />

            <EditText
                android:id="@+id/editText_new_user_name"
                android:layout_width="121dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="8dp"
                android:layout_row="1"
                android:text="@string/new_birthdate" />

            <EditText
                android:id="@+id/editText_new_user_birthday"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1" />

        </GridLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/button_cancel_add_new_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0.93"
                android:text="@string/abort"
                android:textSize="12sp" />

            <Button
                android:id="@+id/add_user_button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add_new_friend"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
